--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.10.0",
     "chart.js": "^4.5.0",
     "framer-motion": "^12.23.5",
     "react": "^19.1.0",
