--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -12,7 +12,11 @@ pydantic_core==2.33.2
 python-dotenv==1.1.1
 sniffio==1.3.1
 SQLAlchemy==2.0.41
+spacy==3.7.2
 starlette==0.46.2
+textblob==0.17.1
+torch==2.1.0
+transformers==4.35.0
 typing-inspection==0.4.1
 typing_extensions==4.14.1
 uvicorn==0.35.0
